# ro-design-mcp

./: .coveragerc  .env.example  .gitignore  .mcp.json  .mcp.json.example  AI_AGENT_PROMPT.md  AMPL_ERROR_FIX_SUMMARY.md  CALUDE.md  CHANGELOG.md  CLAUDE.md  FEATURE_ROADMAP.md  FINAL_FIXES_SUMMARY.md  FIXES_DOCUMENTATION.md  FIXES_SUMMARY.md  GIT_SETUP.md  LICENSE  MCAS_RECYCLE_LIMITATION.md  MULTI_ION_DEFENSE.md  README.md  V2_API_DOCUMENTATION.md  V2_IMPLEMENTATION_SUMMARY.md  analyze_lcow.py  analyze_pressure_without_cp.py  complex_ion_test_results_detailed.md  complex_ion_workflow_test_results.md  economics_analysis_20250719_130212.json  install.bat  install.ps1  modal_config.py  optimizer_v2_test_results.md  pyproject.toml  pytest.ini  requirements.txt  run_economic_test.ps1  run_tests.py  server.py  system_prompt.md  test_60_recovery_fix.py  test_96_recovery.py  test_all_configs.py  (+13 more)
.claude/: settings.local.json
config/: chemical_properties.yaml  economics.yaml  membrane_catalog.yaml  ro_techno_economic.yaml  spacer_profiles.yaml  system_defaults.yaml
docs/: PUMP_COSTING_FIX.md  elegant_initialization.md
future/: README.md
notebooks/: ro_configuration_report_template.ipynb  ro_simulation_mcas_recycle_template.ipynb  ro_simulation_mcas_simple_template.ipynb  ro_simulation_mcas_template.ipynb  ro_simulation_recycle_template.ipynb  ro_simulation_simple_template.ipynb  ro_simulation_template.ipynb
reference/: DIAGNOSTIC_TEST_GUIDE.md  FINAL_SD_MODEL_SOLUTION.md  FLUX_DEBUGGING_IMPLEMENTATION.md  FLUX_VALIDATION_IMPLEMENTATION.md  IMPROVEMENTS_SUMMARY.md  (+64 more)
(+112 files in other folders)
